Fix x-axis overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,8 @@
 }
 
 body {
+    overflow-x: hidden;
+
     background: rgb(248, 249, 250);
 }
 
